--- a/src/TupleExtensions/TupleExtensions.csproj
+++ b/src/TupleExtensions/TupleExtensions.csproj
@@ -8,5 +8,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NETStandard.Library" Version="1.6" />
+    <PackageReference Include="System.ValueTuple" Version="4.3.0" />
   </ItemGroup>
 </Project>
